--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   supabase_flutter: ^1.10.22
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
