--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
   pinput: ^3.0.1
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
