--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   pinput: ^3.0.1
   url_launcher: ^6.2.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
