--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
-  csc_picker: ^0.2.7
   supabase_flutter: ^1.10.22
   image_picker: ^1.0.4
   shared_preferences: ^2.2.2
   pinput: ^3.0.1
   url_launcher: ^6.2.1
   flutter_spinkit: ^5.2.0
+  country_state_city_pro: ^0.0.6
 
 dev_dependencies:
   flutter_test:
