--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.2.1
   flutter_spinkit: ^5.2.0
   country_state_city_pro: ^0.0.6
+  intl: ^0.19.0
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
